--- a/finexpert/css/main.css
+++ b/finexpert/css/main.css
@@ -168,6 +168,9 @@ div, input, header, footer {
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
 
+.wow {
+  visibility: hidden; }
+
 a {
   text-decoration: none; }
 
@@ -343,8 +346,10 @@ header {
 .header__btn {
   margin: 0;
   padding: 5px 12px; }
-  .header__btn span {
-    font-size: 1em; }
+  .header__btn a {
+    font-size: 1em;
+    letter-spacing: .8px;
+    color: #ffffff; }
 
 .text_line-through {
   text-decoration: line-through; }
@@ -836,6 +841,11 @@ header {
 .footer__card-text {
   max-width: 60%; }
 
+.footer__card-btn a {
+  font-size: 1.4em;
+  letter-spacing: .8px;
+  color: #ffffff; }
+
 .subscribe {
   width: 100%; }
 
@@ -969,16 +979,18 @@ header {
     display: none; }
   .work-examples__item-description {
     width: 70%; }
-  .hero-about .row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-        -ms-flex-align: start;
-            align-items: flex-start; }
+  .hero-about {
+    font-size: 1.5em; }
+    .hero-about .row {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: start;
+      -webkit-align-items: flex-start;
+          -ms-flex-align: start;
+              align-items: flex-start; }
   .principles .row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
