--- a/finexpert/css/main.css
+++ b/finexpert/css/main.css
@@ -258,7 +258,8 @@ header {
   right: 20px;
   top: 25px;
   border: none;
-  background-color: transparent; }
+  background-color: transparent;
+  z-index: 99; }
 
 .icon--menu {
   display: block;
@@ -1019,6 +1020,8 @@ header {
     margin: 8px 0; }
   .support__text_highlighted {
     display: none; }
+  .support__block-text {
+    font-size: 1.2em; }
   .wrapper-reviews-clients {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
