--- a/elainer/css/main.css
+++ b/elainer/css/main.css
@@ -483,7 +483,10 @@ ul {
   position: relative;
   min-height: 540px;
   background-size: 100% 100%;
-  background-position: center; }
+  background-position: center;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(60.5%, rgba(255, 255, 255, 0)), color-stop(96.93%, #FFFFFF));
+  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 60.5%, #FFFFFF 96.93%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 60.5%, #FFFFFF 96.93%); }
 
 .hero__semicircle {
   width: 50vw;
@@ -1637,12 +1640,53 @@ ul {
 @media screen and (max-width: 609px) {
   .hero-form__btn-submit {
     width: 100%; }
+  .hero__content {
+    width: 100%; }
+  .hero__title {
+    width: 70%;
+    height: 100vh;
+    max-height: 420px;
+    font-size: 28px; }
+  .hero__bg {
+    width: 100%;
+    height: 100vh;
+    max-height: 420px; }
+    .hero__bg::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(60.5%, rgba(255, 255, 255, 0)), color-stop(96.93%, #FFFFFF));
+      background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 60.5%, #FFFFFF 96.93%);
+      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 60.5%, #FFFFFF 96.93%); }
+  .hero__form {
+    width: 100%;
+    margin: 0px auto 15px auto; }
+  .hero__text {
+    margin-bottom: 15px;
+    text-align: center; }
+  .hero__phone {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .hero__phone, .hero__text {
+    max-width: 380px;
+    margin: 0 auto; }
   .hero__semicircle {
     min-width: initial;
+    height: 100vw;
     width: 100vw;
+    min-width: 495px;
+    min-height: 495px;
     -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
-            transform: rotate(90deg); }
+            transform: rotate(90deg);
+    background-position: top;
+    background-size: auto; }
   .advantages__title {
     width: 70%; }
   .advantages__content {
@@ -1733,17 +1777,24 @@ ul {
     display: flex; } }
 
 @media screen and (max-width: 420px) {
+  .wrapper-offset {
+    padding-left: 20px;
+    padding-right: 20px; }
   .header__nav_media .header-menu__item {
     margin-bottom: 30px;
     font-size: 15px; }
   .header__tel_media {
     margin-left: 15px;
     font-size: 14px; }
-  .wrapper-offset {
-    padding-left: 20px;
-    padding-right: 20px; }
+  .hero__title {
+    width: 100%;
+    text-align: center;
+    padding: 0 20px;
+    font-size: 24px; }
   .advantages {
     padding-bottom: 60px; }
+  .advantages__tooth_big {
+    top: 15%; }
   .advantages__item {
     margin-bottom: 24px; }
     .advantages__item:last-child {
