--- a/elainer/css/main.css
+++ b/elainer/css/main.css
@@ -232,6 +232,8 @@ ul {
             animation-timing-function: ease-in-out;
     -webkit-animation-iteration-count: infinite;
             animation-iteration-count: infinite; }
+  .btn-submit:hover {
+    cursor: pointer; }
 
 .header {
   position: fixed;
@@ -295,7 +297,12 @@ ul {
   -webkit-animation: fadeIn .3s ease-in-out both;
           animation: fadeIn .3s ease-in-out both; }
 
+.overlay_unactive {
+  -webkit-animation: fadeOut .3s ease-in-out both;
+          animation: fadeOut .3s ease-in-out both; }
+
 .header__menu-icon {
+  min-width: 24px;
   min-height: 17px; }
 
 .header__menu-icon_open {
@@ -362,6 +369,10 @@ ul {
   -webkit-animation: fadeInLeft .3s ease-in-out both;
           animation: fadeInLeft .3s ease-in-out both; }
 
+.header__menu_media_unactive {
+  -webkit-animation: fadeOutLeft .3s ease-in-out both;
+          animation: fadeOutLeft .3s ease-in-out both; }
+
 .header__nav_media {
   display: -webkit-box;
   display: -webkit-flex;
@@ -379,7 +390,7 @@ ul {
     color: rgba(65, 69, 92, 0.8); }
     .header__nav_media .header-menu__item::after {
       display: none; }
-  .header__nav_media .header-menu__item_active {
+  .header__nav_media .menu__item_active {
     color: #41455C; }
 
 .header__phone_media {
@@ -442,10 +453,10 @@ ul {
   .header-menu__item:hover {
     color: #1F285A; }
 
-.header-menu__item_active {
+.menu__item_active {
   font-weight: 600;
   color: #1F285A; }
-  .header-menu__item_active:after {
+  .menu__item_active:after {
     content: "";
     width: 100%;
     height: 2px;
@@ -467,6 +478,8 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   margin-right: 40px; }
+  .header__doc:hover {
+    cursor: pointer; }
 
 .header-doc__text {
   margin-left: 10px;
@@ -571,9 +584,13 @@ ul {
   right: 0;
   width: 68%;
   height: 100%;
-  z-index: -1; }
+  z-index: -1;
+  background: url("../img/hero_bg.png") no-repeat;
+  background-position: right;
+  background-size: cover; }
 
 .hero__img-bg {
+  display: none;
   width: 100%;
   height: 100%; }
 
@@ -602,8 +619,7 @@ ul {
   top: 5%;
   width: 18%;
   max-width: 360px;
-  min-width: 90px;
-  z-index: -1; }
+  min-width: 90px; }
   .advantages__tooth_big img {
     width: 100%; }
 
@@ -924,7 +940,7 @@ ul {
   z-index: 3; }
 
 .results__result-img {
-  min-height: 250px; }
+  min-height: 180px; }
 
 .slick-dots {
   margin-top: 30px; }
@@ -1113,11 +1129,14 @@ ul {
 .questions__right-side {
   padding-right: 10%;
   padding-left: 6.4%;
+  padding-bottom: 20px;
   background-color: #FAFAFF; }
 
 .questions__content {
   overflow-y: auto;
   max-height: 100%; }
+  .questions__content::-webkit-scrollbar {
+    width: 0px; }
 
 .questions__title {
   font-weight: 600;
@@ -1157,7 +1176,25 @@ ul {
   line-height: 28px; }
 
 .questions__item {
-  margin-top: 20px; }
+  margin-top: 20px;
+  overflow: hidden; }
+
+.questions__item_active .question__arrow {
+  -webkit-transform: scale(-1);
+      -ms-transform: scale(-1);
+          transform: scale(-1); }
+
+.questions__item_active .answer {
+  display: block;
+  -webkit-animation: fadeIn .3s ease-in-out both;
+          animation: fadeIn .3s ease-in-out both; }
+
+.questions__item_unactive .answer {
+  -webkit-transform-origin: 50% 0;
+      -ms-transform-origin: 50% 0;
+          transform-origin: 50% 0;
+  -webkit-animation: scaleOut .5s ease-in-out both;
+          animation: scaleOut .5s ease-in-out both; }
 
 .question {
   display: -webkit-box;
@@ -1178,12 +1215,19 @@ ul {
   background-color: #0EA6A6;
   -webkit-box-shadow: 0px 4px 32px rgba(15, 27, 97, 0.06);
           box-shadow: 0px 4px 32px rgba(15, 27, 97, 0.06); }
+  .question:hover {
+    cursor: pointer; }
 
 .question__text {
   padding-right: 10px;
   border-radius: 3px;
   font-weight: 600;
   color: #FFFFFF; }
+
+.question__arrow {
+  -webkit-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out; }
 
 .answer {
   display: none;
@@ -1226,9 +1270,9 @@ ul {
   -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
-  width: 33.333%;
+  width: 30.333%;
   min-width: 245px;
-  padding-right: 15px;
+  margin-right: 30px;
   margin-bottom: 69px; }
 
 .checklist-item__num {
@@ -1359,6 +1403,10 @@ ul {
           flex-direction: column;
   width: 25%;
   margin-right: 10px; }
+  .footer__nav .menu__item_active {
+    color: #ffffff; }
+    .footer__nav .menu__item_active::after {
+      display: none; }
 
 .footer-menu__item {
   font-weight: 500;
@@ -1406,6 +1454,8 @@ ul {
   text-align: center;
   color: #ffffff;
   background-color: #0C1233; }
+  .footer__doc-text:hover {
+    cursor: pointer; }
 
 .footer_media {
   display: none;
@@ -1480,19 +1530,19 @@ ul {
 
 @-webkit-keyframes fadeInLeft {
   0% {
-    -webkit-transform: translate(-100%, 0);
-            transform: translate(-100%, 0); }
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0); }
   100% {
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0); } }
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0); } }
 
 @keyframes fadeInLeft {
   0% {
-    -webkit-transform: translate(-100%, 0);
-            transform: translate(-100%, 0); }
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0); }
   100% {
-    -webkit-transform: translate(0, 0);
-            transform: translate(0, 0); } }
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0); } }
 
 @-webkit-keyframes fadeIn {
   0% {
@@ -1505,6 +1555,56 @@ ul {
     opacity: 0; }
   100% {
     opacity: 1; } }
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+
+@-webkit-keyframes scaleOut {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1); }
+  100% {
+    -webkit-transform: scale3d(0, 0, 0);
+            transform: scale3d(0, 0, 0); } }
+
+@keyframes scaleOut {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1); }
+  100% {
+    -webkit-transform: scale3d(0, 0, 0);
+            transform: scale3d(0, 0, 0); } }
+
+@-webkit-keyframes fadeOutLeft {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0); }
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0); } }
+
+@keyframes fadeOutLeft {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0); }
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0); } }
+
+@media screen and (max-width: 1440px) {
+  .hero__img-bg {
+    display: block; }
+  .hero__bg {
+    background: initial; } }
 
 @media screen and (max-width: 1198px) {
   .header__item {
@@ -1614,7 +1714,7 @@ ul {
   .steps__tooth {
     display: none; }
   .steps__elainer {
-    top: 25%;
+    top: 35%;
     bottom: initial;
     min-width: 250px; }
   .reviews__arrows_custom {
@@ -1641,10 +1741,11 @@ ul {
     width: 100%;
     padding: 40px; }
   .questions__content {
-    max-height: 720px; }
+    max-height: initial; }
   .questions__doc-img {
     width: 70%;
-    height: 70%; } }
+    height: 70%;
+    max-width: 472px; } }
 
 @media screen and (max-width: 609px) {
   .hero-form__btn-submit {
@@ -1654,12 +1755,12 @@ ul {
   .hero__title {
     width: 70%;
     height: 100vh;
-    max-height: 420px;
+    max-height: 580px;
     font-size: 28px; }
   .hero__bg {
     width: 100%;
     height: 100vh;
-    max-height: 420px; }
+    max-height: 580px; }
     .hero__bg::before {
       content: "";
       display: block;
@@ -1671,6 +1772,13 @@ ul {
       background: -webkit-gradient(linear, left top, left bottom, color-stop(60.5%, rgba(255, 255, 255, 0)), color-stop(96.93%, #FFFFFF));
       background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 60.5%, #FFFFFF 96.93%);
       background: linear-gradient(180deg, rgba(255, 255, 255, 0) 60.5%, #FFFFFF 96.93%); }
+  .hero__img-bg {
+    height: 95%;
+    width: 135%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1; }
   .hero__form {
     width: 100%;
     margin: 0px auto 15px auto; }
@@ -1772,9 +1880,11 @@ ul {
     width: 51%;
     min-width: 225px; }
   .questions__doc-img {
-    width: 90%; }
+    width: 90%;
+    min-width: 420px; }
   .checklist__item {
-    width: 100%; }
+    width: 100%;
+    margin-right: 10px; }
   .footer__row-top, .footer__row-bottom {
     display: none; }
   .footer {
@@ -1784,6 +1894,14 @@ ul {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex; } }
+
+@media screen and (max-width: 525px) {
+  .hero__img-bg {
+    width: 125%; }
+  .hero__bg {
+    max-height: 530px; }
+  .hero__title {
+    max-height: 530px; } }
 
 @media screen and (max-width: 420px) {
   .wrapper-offset {
@@ -1799,7 +1917,13 @@ ul {
     width: 100%;
     text-align: center;
     padding: 0 20px;
-    font-size: 24px; }
+    font-size: 24px;
+    max-height: 500px; }
+  .hero__bg {
+    max-height: 500px; }
+  .hero__img-bg {
+    width: 150%;
+    height: 79%; }
   .advantages {
     padding-bottom: 60px; }
   .advantages__tooth_big {
@@ -1867,8 +1991,9 @@ ul {
     min-height: 520px;
     padding: 40px 20px 0px 20px; }
   .questions__doc-img {
-    width: 100%;
-    min-height: initial; }
+    width: initial;
+    min-height: initial;
+    min-width: initial; }
   .questions__right-side {
     padding: 70px 20px 40px 20px; }
   .questions__doc-card {
