--- a/appointments/css/main.css
+++ b/appointments/css/main.css
@@ -175,7 +175,8 @@ a {
   text-decoration: none; }
 
 ul {
-  padding-left: 0;
+  padding: 0;
+  margin: 0;
   list-style: none; }
 
 input {
@@ -253,8 +254,10 @@ input {
           align-items: center; }
 
 .controlls__date-period-list, .controlls__date-view-list {
-  top: 25px;
-  right: 0; }
+  top: 35px;
+  right: 0;
+  width: auto;
+  white-space: nowrap; }
 
 .drop-list {
   position: absolute;
@@ -267,7 +270,8 @@ input {
 
 .drop-list__item {
   position: relative;
-  padding: 8px 20px; }
+  padding: 8px 20px;
+  cursor: pointer; }
 
 .drop-list__item_active {
   background-color: #E7E9EC; }
@@ -312,7 +316,8 @@ input {
       -ms-flex-align: center;
           align-items: center;
   margin-right: 15px;
-  font-size: 1.4em; }
+  font-size: 1.4em;
+  cursor: pointer; }
 
 .controlls__date-view-text, .controlls__date-period-text {
   margin-right: 8px; }
@@ -447,6 +452,7 @@ input {
   text-align: start; }
 
 .table__cell_headline {
+  position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -486,13 +492,20 @@ input {
   .table__filter-btn:hover {
     cursor: pointer; }
 
+.table__filter-list {
+  top: 50px;
+  left: 0;
+  width: auto;
+  white-space: nowrap; }
+
 .filter-item {
   display: block;
   position: relative;
-  padding-left: 25px;
-  margin-bottom: 12px;
+  padding-left: 30px;
   cursor: pointer;
   font-size: 1.4em;
+  font-weight: 400;
+  line-height: 1.5;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -505,7 +518,6 @@ input {
   height: 0;
   width: 0; }
 
-/* Create a custom checkbox */
 .filter-item__checkmark {
   position: absolute;
   top: 0;
