--- a/appointments/css/main.css
+++ b/appointments/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%; }
@@ -310,12 +311,14 @@ input {
 
 .controls__search {
   position: relative;
-  width: 100%; }
+  width: 100%;
+  cursor: pointer; }
 
 .search-field {
   width: 100%;
   height: 100%;
   min-height: 42px;
+  padding: 5px 50px 5px 20px;
   border-radius: 20px;
   border: 1px solid #D0D3DA; }
 
@@ -342,7 +345,8 @@ input {
   min-width: 4.2em;
   min-height: 4.2em;
   border-radius: 50%;
-  border: 1px solid #D0D3DA; }
+  border: 1px solid #D0D3DA;
+  cursor: pointer; }
 
 .controls__date-view, .controls__date-period {
   position: relative;
@@ -412,6 +416,9 @@ input {
   padding-right: 10px;
   font-size: 1.4em; }
 
+.calendar {
+  background-color: #ffffff; }
+
 .controls-mobile__item {
   display: none;
   -webkit-box-align: center;
@@ -428,8 +435,7 @@ input {
 .table-navigation {
   position: relative;
   width: 100%;
-  min-height: 15px;
-  margin: 0 25px; }
+  min-height: 15px; }
 
 .table-navigation__content {
   display: -webkit-box;
@@ -442,7 +448,7 @@ input {
           align-items: center;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 25px;
   z-index: 1;
   font-size: 1.4em; }
 
@@ -746,16 +752,14 @@ input {
   padding-left: 8px; }
 
 .table-navigation-mobile__sort {
+  display: none;
   position: absolute;
   right: 15px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  cursor: pointer; }
 
 .table-navigation-mobile__sort-label, .table-navigation-mobile__sort-text {
   font-size: 1.4em; }
@@ -767,11 +771,95 @@ input {
 .table-navigation-mobile__sort-text {
   margin-right: 25px; }
 
+.table-navigation_top .open .table-navigation-mobile__sort-btn {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg); }
+
+.table-navigation-mobile__sort-list {
+  white-space: nowrap;
+  right: 0;
+  top: 25px; }
+
+.sort-list__item {
+  font-size: 1.4em; }
+
+.sort-list__sort-settings {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 8px 20px; }
+
+.sort-list__sort-settings-item {
+  display: block;
+  position: relative;
+  padding-left: 25px;
+  cursor: pointer;
+  font-size: 1.4em;
+  font-weight: 400;
+  line-height: 1.5;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.sort-list__sort-settings-item_ascending svg {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg); }
+
+.sort-list__sort-settings-checkbox {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer; }
+
+.sort-list__sort-settings-сheckmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 1px solid #D0D3DA;
+  background-color: #ffffff; }
+
+.sort-list__sort-settings-item {
+  margin-right: 20px; }
+  .sort-list__sort-settings-item:last-child {
+    margin-right: 0; }
+
+.sort-list__sort-settings-item .sort-list__sort-settings-checkbox:checked ~ .sort-list__sort-settings-сheckmark {
+  background-color: #6093DE; }
+
+.sort-list__sort-btn-wrapper {
+  text-align: center; }
+
+.sort-list__sort-btn {
+  padding: 4px 25px;
+  background-color: #ffffff;
+  border: 1px solid #6093DE;
+  border-radius: 6px;
+  font-size: 1.6em;
+  color: #6093DE;
+  cursor: pointer; }
+
 @media screen and (max-width: 1200px) {
   .table {
     display: none; }
   .table-mobile {
-    display: block; } }
+    display: block; }
+  .table-navigation-mobile__sort {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+  .table-navigation__content {
+    left: 15px; } }
 
 @media screen and (max-width: 998px) {
   .dashboard__item-number {
@@ -806,8 +894,8 @@ input {
     margin: 15px 0 0 0; }
   .table-navigation__controls_top {
     display: none; }
-  .table-navigation__content_top {
-    left: 15px; }
+  .table-navigation__content_bottom {
+    left: 0; }
   .table-navigation_bottom {
     position: fixed;
     bottom: 0;
