--- a/appointments/css/main.css
+++ b/appointments/css/main.css
@@ -322,7 +322,8 @@ input {
 .controls__search-btn {
   position: absolute;
   right: 0;
-  top: 0; }
+  top: 0;
+  z-index: 2; }
 
 .controls__search-btn, .controls__reload-btn {
   display: -webkit-box;
@@ -513,7 +514,6 @@ input {
   position: absolute;
   top: 0;
   left: 25px;
-  z-index: 1;
   font-size: 1.4em; }
 
 .table-navigation__text {
