--- a/appointments/css/main.css
+++ b/appointments/css/main.css
@@ -949,16 +949,27 @@ input {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
   padding: 25px;
-  width: 80%;
+  margin: 0 10px;
+  width: 100%;
   border-radius: 6px; }
 
 .table-mobile__popup_name {
+  -webkit-flex-basis: 40%;
+      -ms-flex-preferred-size: 40%;
+          flex-basis: 40%;
   margin-right: 15px;
+  margin-bottom: 8px;
+  margin-top: 8px;
   font-size: 2.5em;
+  text-align: center;
   padding: 8px 25px;
   border: 2px solid #6093DE;
-  border-radius: 6px; }
+  border-radius: 6px;
+  white-space: nowrap; }
 
 .table-mobile__popup_share-btn {
   display: -webkit-box;
@@ -969,7 +980,16 @@ input {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-basis: 40%;
+      -ms-flex-preferred-size: 40%;
+          flex-basis: 40%;
   padding: 8px 25px;
+  margin-bottom: 8px;
+  margin-top: 8px;
   border: 2px solid #6093DE;
   border-radius: 6px; }
   .table-mobile__popup_share-btn svg {
@@ -977,7 +997,7 @@ input {
 
 .table-mobile__share-text {
   font-size: 2em;
-  margin-right: 8px; }
+  margin-right: 10px; }
 
 .table__share-btn_active {
   border-color: #6093DE;
@@ -1062,21 +1082,40 @@ input {
 
 .sort-list__sort-settings-сheckmark {
   position: absolute;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   top: 0;
   left: 0;
   height: 20px;
   width: 20px;
   border-radius: 50%;
-  border: 1px solid #D0D3DA;
+  border: 1px solid #6093DE;
   background-color: #ffffff; }
+  .sort-list__sort-settings-сheckmark::after {
+    content: "";
+    display: none;
+    background-color: #6093DE;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%; }
 
 .sort-list__sort-settings-item {
   margin-right: 20px; }
   .sort-list__sort-settings-item:last-child {
     margin-right: 0; }
 
-.sort-list__sort-settings-item .sort-list__sort-settings-checkbox:checked ~ .sort-list__sort-settings-сheckmark {
-  background-color: #6093DE; }
+.sort-list__sort-settings-item .sort-list__sort-settings-checkbox:checked ~ .sort-list__sort-settings-сheckmark::after {
+  display: block; }
 
 .sort-list__sort-btn-wrapper {
   text-align: center; }
